Fix partial témoignage layout, fix blog catégory active color issue, fix row (date, user and cat) alignment. Add new code for OG take from AE and clear up css and remove duplicate fontawesome call in default layout.

--- a/themes/ejp161003/assets/less/pages/all.less
+++ b/themes/ejp161003/assets/less/pages/all.less
@@ -6,8 +6,14 @@
 
 @import "home";
 
-
-
+/*---------------*/
+/***** HACK *****/
+/*---------------*/
+.list-group .active {
+  a{
+    color: @white;
+  }
+}
 
 /*---------------*/
 /***** Set CSS *****/
